# cmdlinker

./: .gitignore  Ost.yaml  README.md  pyproject.toml
cmdlinker/: __init__.py  analyse.py  cli.yaml  client.py  const.py  constants.py
cmdlinker/builtin/: analyse.py  cmd_conf.py  exception.py  file_operation.py  logger_operation.py  ls.py  module_template.py.j2  shell_utils.py  ssh_utils.py
cmdlinker/model/: models.py
example/: Free.yaml  Ls.yaml  docker.py  docker.yaml  free.py  ls.py
tests/: aa.py  bb.py  cc.py  config_module.py  test_cmd.py
